<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        //flag icon and choose country
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/medium_area"
            android:orientation="horizontal"
            android:weightSum="2">
            //flag of countrys
            <ImageView
                android:id="@+id/flag_img"
                android:layout_width="0dp"
                android:layout_height="@dimen/small_area"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginRight="@dimen/large_space"
                android:src="@drawable/vn_flag"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/gaint_space"
                    android:layout_height="@dimen/gaint_space"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_location"/>
                <Spinner
                    android:id="@+id/countrys"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        //info
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                // info hotel
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/main_ic"
                            android:src="@drawable/ic_hotel"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_hotel"
                            android:layout_gravity="center"/>
                        <Button
                            style="@style/main_btn"
                            android:onClick="getFragment"
                            android:id="@+id/btn_hotel"
                            android:text="@string/show_number_available_items"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hotel_01"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hotel_02"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hotel_03"/>
                </LinearLayout>
                // info bus
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/main_ic"
                            android:src="@drawable/ic_bus"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_bus"
                            android:layout_gravity="center"/>
                        <Button
                            android:onClick="getFragment"
                            style="@style/main_btn"
                            android:id="@+id/btn_bus"
                            android:text="@string/show_number_available_items"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bus_01"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bus_02"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bus_03"/>
                </LinearLayout>
                // info atm
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/main_ic"
                            android:src="@drawable/ic_atm"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_atm"
                            android:layout_gravity="center"/>
                        <Button
                            android:onClick="getFragment"
                            style="@style/main_btn"
                            android:id="@+id/btn_atm"
                            android:text="@string/show_number_available_items"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atm_01"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atm_02"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atm_03"/>
                </LinearLayout>
                // info hospital
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/main_ic"
                            android:src="@drawable/ic_hostpital"
                            android:layout_gravity="center"/>
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_hospital"
                            android:layout_gravity="center"/>
                        <Button
                            android:onClick="getFragment"
                            style="@style/main_btn"
                            android:id="@+id/btn_hospital"
                            android:text="@string/show_number_available_items"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hospital_01"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hospital_02"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hospital_03"/>
                </LinearLayout>
                // extend available not already yet
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <!--                <ImageView-->
                        <!--                    style="@style/main_ic"-->
                        <!--                    android:layout_gravity="center"/>-->
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_park"
                            android:layout_gravity="center"/>
                        <Button
                            style="@style/main_btn"
                            android:text="@string/show_unavailable_item"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <!--                    <ImageView-->
                        <!--                        style="@style/main_ic"-->
                        <!--                        android:layout_gravity="center"/>-->
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_restaurant"
                            android:layout_gravity="center"/>
                        <Button
                            style="@style/main_btn"
                            android:text="@string/show_unavailable_item"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/large_space"
                    android:layout_marginRight="@dimen/large_space">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/box_space"
                        android:orientation="horizontal">
                        <!--                    <ImageView-->
                        <!--                        style="@style/main_ic"-->
                        <!--                        android:src="@drawable/ic_hotel"-->
                        <!--                        android:layout_gravity="center"/>-->
                        <TextView
                            style="@style/main_txt_header"
                            android:text="@string/service_mall"
                            android:layout_gravity="center"/>
                        <Button
                            style="@style/main_btn"
                            android:text="@string/show_unavailable_item"
                            android:textAlignment="center"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</FrameLayout>